--- a/Практическая №1/index-1.html
+++ b/Практическая №1/index-1.html
@@ -2,7 +2,6 @@
 <html lang="ru">
     <head>
         <title>Привет мир</title>
-        <!-- Required meta tags -->
         <meta charset="utf-8" />
     </head>
 
@@ -10,7 +9,7 @@
         <h1>Привет мир</h1>
         <p><em>Давно выяснено</em>, что при оценке дизайна и композиции 
         читаемый текст <s>мешает сосредоточиться</s>.</p>
-        <p><strong>Lorem Ipsum</strong> используют потом,<br>
+        <p><strong>Lorem Ipsum</strong> используют потому,<br>
         что тот обеспечивает более или менее стандартное <u>заполнение шаблона</u>,
         а также реальное<br>
         распределение букв и прбелов в абзацах, которое не получается при простой дубликации.</p>
